--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.6",
     "koa": "^2.5.2",
+    "koa-passport": "^4.1.1",
     "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
     "mongoose": "^5.3.14",
     "nodemailer": "^4.7.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
