--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@nuxtjs/axios": "^5.0.0",
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
+    "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.6",
     "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
     "koa-passport": "^4.1.1",
     "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
